Pushing fix for dark mode borders as well

--- a/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
+++ b/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
@@ -600,8 +600,8 @@
 
     // Make sure all horizontal borders use the default border color in dark mode
     tr, th, td {
-      border-top: 1px solid $border_dark !important;
-      border-bottom: 1px solid $border_dark !important;
+      border-top-color: $border_dark !important;
+      border-bottom-color: $border_dark !important;
     }
 
     .bg-white {
